--- a/frontend/locales/ja/home.json
+++ b/frontend/locales/ja/home.json
@@ -1,7 +1,7 @@
 {
   "input-message": "場所を検索する！",
-  "dialog-title": "でのトリップ",
-  "dialog-content": "トリップの好みを選択してください",
+  "dialog-title": "での旅行計画",
+  "dialog-content": "旅行の好みを選択してください",
   "date-label": "日程",
   "date-from-label": "から",
   "date-until-label": "まで",
