fix: fix i18n locale

--- a/frontend/locales/en/home.json
+++ b/frontend/locales/en/home.json
@@ -1,6 +1,6 @@
 {
   "input-message": "Search for the place you want to go!",
-  "dialog-title": "Your trip in",
+  "dialog-title": "Your trip in {{name}}",
   "dialog-content": "Select your travel preferences",
   "date-label": "Desired date",
   "date-from-label": "Date from",
