--- a/frontend/locales/en/result.json
+++ b/frontend/locales/en/result.json
@@ -1,3 +1,7 @@
 {
-  "title": "Your trip to {{name}}"
+  "title": "Your trip to {{name}}",
+  "input": {
+    "title": "Where do you want to go?",
+    "placeholder": "Try AI: find me a museum"
+  }
 }
