--- a/frontend/locales/ja/home.json
+++ b/frontend/locales/ja/home.json
@@ -1,4 +1,5 @@
 {
+  "caption": "AIで旅行計画を立てよう！",
   "input-message": "場所を検索する！",
   "dialog-title": "{{name}}での旅行計画",
   "dialog-content": "旅行の好みを選択してください",
