--- a/frontend/locales/en/result.json
+++ b/frontend/locales/en/result.json
@@ -3,5 +3,6 @@
   "input": {
     "title": "Where do you want to go?",
     "placeholder": "Try AI: find me a museum"
-  }
+  },
+  "get-directions": "Get directions"
 }
