Add function to delete card from list

--- a/frontend/locales/en/home.json
+++ b/frontend/locales/en/home.json
@@ -49,5 +49,10 @@
     "zoo": "Zoo",
     "aquarium": "Aquarium",
     "amusement": "Amusement"
+  },
+  "deleteCardModal": {
+    "title": "Delete this location?",
+    "ok": "OK",
+    "cancel": "Cancel"
   }
 }
