--- a/frontend/locales/ja/result.json
+++ b/frontend/locales/ja/result.json
@@ -4,5 +4,10 @@
     "title": "新しい観光地を追加",
     "placeholder": "Try AI: 博物館を探して"
   },
-  "get-directions": "行き方を調べる"
+  "get-directions": "行き方を調べる",
+  "deleteCardModal": {
+    "title": "この場所を削除しますか？",
+    "ok": "はい",
+    "cancel": "キャンセル"
+  }
 }
