--- a/frontend/locales/en/result.json
+++ b/frontend/locales/en/result.json
@@ -4,7 +4,11 @@
     "title": "Where do you want to go?",
     "placeholder": "Try AI: find me a museum"
   },
+  "open-in-google-maps": "Open in Google Maps",
   "get-directions": "Get directions",
+  "get-walk-directions": "Get walking directions",
+  "get-drive-directions": "Get driving directions",
+  "get-transit-directions": "Get transit directions",
   "deleteCardModal": {
     "title": "Delete this location?",
     "ok": "OK",
