--- a/frontend/locales/ja/result.json
+++ b/frontend/locales/ja/result.json
@@ -4,7 +4,11 @@
     "title": "新しい観光地を追加",
     "placeholder": "Try AI: 博物館を探して"
   },
-  "get-directions": "行き方を調べる",
+  "open-in-google-maps": "Google Mapsで開く",
+  "get-directions": "行き先を調べる",
+  "get-walk-directions": "徒歩で行き先を調べる",
+  "get-drive-directions": "車で行き先を調べる",
+  "get-transit-directions": "公共交通機関で行き先を調べる",
   "deleteCardModal": {
     "title": "この場所を削除しますか？",
     "ok": "はい",
