--- a/frontend/locales/en/home.json
+++ b/frontend/locales/en/home.json
@@ -1,6 +1,7 @@
 {
   "caption": "Your AI personal travel planner",
-  "input-message": "Search for the place you want to go!",
+  "input-message": "Tokyo, Japan",
+  "input-button": "Let's go!",
   "dialog-title": "Your trip in {{name}}",
   "dialog-content": "Select your travel preferences",
   "date-label": "Desired date",
