feat: refactor featured section and add i18n

--- a/frontend/locales/en/home.json
+++ b/frontend/locales/en/home.json
@@ -52,6 +52,8 @@
     "aquarium": "Aquarium",
     "amusement": "Amusement"
   },
+  "featured-title": "Featured",
+  "featured-subtitle": "Most popular city for traveling",
   "featured": {
     "tokyo": "Tokyo",
     "kyoto": "Kyoto",
