--- a/frontend/locales/ja/home.json
+++ b/frontend/locales/ja/home.json
@@ -64,6 +64,18 @@
     "nagoya": "名古屋",
     "kanazawa": "金沢",
     "yokohama": "横浜",
-    "nikko": "日光"
+    "nikko": "日光",
+    "place": {
+      "tokyo": "日本、東京都",
+      "kyoto": "日本、京都府",
+      "osaka": "日本、大阪府",
+      "hokkaido": "日本、北海道",
+      "okinawa": "日本、沖縄県",
+      "nara": "日本、奈良県",
+      "nagoya": "日本、愛知県、名古屋市",
+      "kanazawa": "日本、石川県、金沢市",
+      "yokohama": "日本、神奈川県、横浜市",
+      "nikko": "日本、栃木県、日光市"
+    }
   }
 }
