--- a/frontend/locales/ja/result.json
+++ b/frontend/locales/ja/result.json
@@ -9,5 +9,12 @@
     "title": "この場所を削除しますか？",
     "ok": "はい",
     "cancel": "キャンセル"
+  },
+  "new-location": {
+    "park": "公園探して",
+    "aquarium": "水族館探して",
+    "museum": "博物館探して",
+    "shrine": "神社探して",
+    "fun": "遊ぶところ探して"
   }
 }
