--- a/frontend/locales/ja/result.json
+++ b/frontend/locales/ja/result.json
@@ -11,10 +11,15 @@
     "cancel": "キャンセル"
   },
   "new-location": {
-    "park": "公園探して",
-    "aquarium": "水族館探して",
-    "museum": "博物館探して",
-    "shrine": "神社探して",
-    "fun": "遊ぶところ探して"
+    "park": "公園",
+    "park-prompt": "公園探して",
+    "aquarium": "水族館",
+    "aquarium-prompt": "水族館探して",
+    "museum": "博物館",
+    "museum-prompt": "博物館探して",
+    "shrine": "神社",
+    "shrine-prompt": "神社探して",
+    "fun": "遊ぶところ",
+    "fun-prompt": "遊ぶところ探して"
   }
 }
