fix: restaurant state don't dissappear after close dialog

--- a/frontend/locales/en/result.json
+++ b/frontend/locales/en/result.json
@@ -13,5 +13,6 @@
     "title": "Delete this location?",
     "ok": "OK",
     "cancel": "Cancel"
-  }
+  },
+  "restaurant-title": "Restaurant results"
 }
