feat: implement route display i18n and trip location in session sub header

--- a/frontend/locales/en/result.json
+++ b/frontend/locales/en/result.json
@@ -27,5 +27,6 @@
     "fun": "Fun",
     "fun-prompt": "Find me something fun"
   },
-  "total-duration": "Travel time"
+  "total-duration": "Travel time",
+  "display-routes": "Display Routes"
 }
