--- a/frontend/locales/ja/result.json
+++ b/frontend/locales/ja/result.json
@@ -27,5 +27,6 @@
     "fun": "遊ぶところ",
     "fun-prompt": "遊ぶところ探して"
   },
-  "total-duration": "移動時間"
+  "total-duration": "移動時間",
+  "display-routes": "ルート表示"
 }
